--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,9 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
 @import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
-/*
-    Center the contents of the page.
-*/
-
-body {
-    margin: 0 auto;
-    width: 50%;
+*{
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -19,6 +15,7 @@ body {
 body {
     font-family: Open Sans, Verdana, sans-serif;
     font-size: 12pt;
+    background-color:#f9f9f9;
 }
 
 h1 {
@@ -155,4 +152,95 @@ form input[type=submit]:only-child {
 .righttb{
     list-style:none;
     font-size:25px;
+}
+
+ /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
+    height: 275px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.reveal{
+    width:150px;
+    margin:0 auto;
+    margin-bottom: 20px;
+}
+
+.bottom{
+    width: 100%;
+    height: 130px;
+    background-color:#d9d9d9;
+}
+
+.content{
+    margin: 0 auto;
+    width: 50%;
+}
+
+.invoer{
+    width: 100px;
+    height: 30px;
+    font-size:15px;
+}
+.invoer_gr{
+    width: 306px;
+    height: 50px;
+    font-size:30px;
+    display: block;
+}
+
+.txt{
+    color:#9e9e9e;
+    font-size:30px;
+    line-height:30px;
+    float: right;
+    margin-top:100px;
+}
+.menu{
+    float: left;
+    list-style: none;
+    color:#3e3e3e;
+    font-size:20px;
+}
+.modcont{
+    position:fixed;
+    top: 40%;
+    left: 50%;
+    width: 310px;
+    height:100px;
+    margin-left:-155px;
+
 }
